Signed-off-by: wang312 <3351729642@qq.com>

--- a/html/w.html
+++ b/html/w.html
@@ -3,15 +3,18 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title>场地</title>
-    <link rel="stylesheet" href="../css/w.css">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="stylesheet" href="../css/index.css"/>
     <link rel="stylesheet" href="../css/reset.css"/>
     <script src="../js/jquery-1.8.3.min.js"></script>
+    <script src="../js/mobile-util.js"></script>
+    <meta name="viewport" content="width=640">
+    <link rel="stylesheet" href="../css/w.css">
     <link rel="stylesheet" type="text/css" href="../css/font_p2t9isy0eqjxxbt9/iconfont.css">
 </head>
 <body>
 <!--导航-->
-<div class="h-nav">
+<div class="h-nav w-nav">
     <div class="h-nav1 w-nav1">
         <div class="h-nav2">
             <div class="h-nav-logo">
@@ -44,7 +47,7 @@
     </div>
 </div>
 <!--头部-->
-<div class="w-header">
+<div class="w-header w-nav">
     <div class="w-outer">
         <div class="w-inner">
             <img src="../img/w-img/w-back.jpg" alt="" style="display:block;">
@@ -60,10 +63,10 @@
 <!--内容-->
 <div class="cont w-wrap">
     <div class="w-box">
-        <p class="w_con_nav">
+        <p class="w_con_nav w-nav">
             <a href="#">首页</a> > <a href="#">精选场地</a>
         </p>
-        <div class="w_con_list">
+        <div class="w_con_list w-nav">
             <p class="w_con_list_type">
                 <b>类型：</b> <span class="active">不限</span><span>星级酒店</span><span>特色餐厅</span><span>特色场地</span>
             </p>
@@ -71,7 +74,14 @@
                 <b>起价：</b> <span class="active">不限</span><span>从高到低</span><span>从低到高</span>
             </p>
         </div>
-        <div class="w_list">
+        <div class="w_select">
+            <p>不限 <span class="w_span"></span> </p>
+            <p>不限</p>
+            <p>星级酒店</p>
+            <p>特色餐厅</p>
+            <p>特色场地</p>
+        </div>
+        <div class="w_list w-nav">
             <a href="w/jiuhao.html">
             <div class="w_list_icon show">
                 <div class="img"><img src="../img/w-img/list1.jpg" alt=""></div>
@@ -81,6 +91,8 @@
                     <p>京城北五内环顶级私密会所，典雅新中式古典建筑群。</p>
                     <p>北京 朝阳 </p>
                     <p><span class="red">户外仪式</span><span class="blue">草坪婚礼</span><span class="pink">一年四季青草坪</span> </p>
+                    <p>4888元/桌起</p>
+                    <p>北京 朝阳 </p>
                 </div>
                 <div class="w-clear"></div>
             </div></a>
@@ -93,6 +105,8 @@
                     <p>京城北五内环顶级私密会所，典雅新中式古典建筑群。</p>
                     <p>北京 朝阳 </p>
                     <p><span class="red">户外仪式</span><span class="blue">草坪婚礼</span><span class="pink">一年四季青草坪</span> </p>
+                    <p>4888元/桌起</p>
+                    <p>北京 朝阳 </p>
                 </div>
                 <div class="w-clear"></div>
             </div></a>
@@ -105,6 +119,8 @@
                     <p>京城北五内环顶级私密会所，典雅新中式古典建筑群。</p>
                     <p>北京 朝阳 </p>
                     <p><span class="red">户外仪式</span><span class="blue">草坪婚礼</span><span class="pink">一年四季青草坪</span> </p>
+                    <p>4888元/桌起</p>
+                    <p>北京 朝阳 </p>
                 </div>
                 <div class="w-clear"></div>
             </div></a>
@@ -117,6 +133,8 @@
                     <p>京城北五内环顶级私密会所，典雅新中式古典建筑群。</p>
                     <p>北京 朝阳 </p>
                     <p><span class="red">户外仪式</span><span class="blue">草坪婚礼</span><span class="pink">一年四季青草坪</span> </p>
+                    <p>4888元/桌起</p>
+                    <p>北京 朝阳 </p>
                 </div>
                 <div class="w-clear"></div>
             </div></a>
@@ -129,6 +147,8 @@
                     <p>京城北五内环顶级私密会所，典雅新中式古典建筑群。</p>
                     <p>北京 朝阳 </p>
                     <p><span class="red">户外仪式</span><span class="blue">草坪婚礼</span><span class="pink">一年四季青草坪</span> </p>
+                    <p>4888元/桌起</p>
+                    <p>北京 朝阳 </p>
                 </div>
                 <div class="w-clear"></div>
             </div></a>
@@ -141,6 +161,8 @@
                     <p>京城北五内环顶级私密会所，典雅新中式古典建筑群。</p>
                     <p>北京 朝阳 </p>
                     <p><span class="red">户外仪式</span><span class="blue">草坪婚礼</span><span class="pink">一年四季青草坪</span> </p>
+                    <p>4888元/桌起</p>
+                    <p>北京 朝阳 </p>
                 </div>
                 <div class="w-clear"></div>
             </div></a>
@@ -153,6 +175,8 @@
                     <p>京城北五内环顶级私密会所，典雅新中式古典建筑群。</p>
                     <p>北京 朝阳 </p>
                     <p><span class="red">户外仪式</span><span class="blue">草坪婚礼</span><span class="pink">一年四季青草坪</span> </p>
+                    <p>4888元/桌起</p>
+                    <p>北京 朝阳 </p>
                 </div>
                 <div class="w-clear"></div>
             </div></a>
@@ -165,6 +189,8 @@
                     <p>京城北五内环顶级私密会所，典雅新中式古典建筑群。</p>
                     <p>北京 朝阳 </p>
                     <p><span class="red">户外仪式</span><span class="blue">草坪婚礼</span><span class="pink">一年四季青草坪</span> </p>
+                    <p>4888元/桌起</p>
+                    <p>北京 朝阳 </p>
                 </div>
                 <div class="w-clear"></div>
             </div></a>
@@ -177,6 +203,8 @@
                     <p>京城北五内环顶级私密会所，典雅新中式古典建筑群。</p>
                     <p>北京 朝阳 </p>
                     <p><span class="red">户外仪式</span><span class="blue">草坪婚礼</span><span class="pink">一年四季青草坪</span> </p>
+                    <p>4888元/桌起</p>
+                    <p>北京 朝阳 </p>
                 </div>
                 <div class="w-clear"></div>
             </div></a>
@@ -189,6 +217,8 @@
                     <p>京城北五内环顶级私密会所，典雅新中式古典建筑群。</p>
                     <p>北京 朝阳 </p>
                     <p><span class="red">户外仪式</span><span class="blue">草坪婚礼</span><span class="pink">一年四季青草坪</span> </p>
+                    <p>4888元/桌起</p>
+                    <p>北京 朝阳 </p>
                 </div>
                 <div class="w-clear"></div>
             </div></a>
@@ -201,6 +231,8 @@
                     <p>京城北五内环顶级私密会所，典雅新中式古典建筑群。</p>
                     <p>北京 朝阳 </p>
                     <p><span class="red">户外仪式</span><span class="blue">草坪婚礼</span><span class="pink">一年四季青草坪</span> </p>
+                    <p>4888元/桌起</p>
+                    <p>北京 朝阳 </p>
                 </div>
                 <div class="w-clear"></div>
             </div></a>
@@ -213,6 +245,8 @@
                     <p>京城北五内环顶级私密会所，典雅新中式古典建筑群。</p>
                     <p>北京 朝阳 </p>
                     <p><span class="red">户外仪式</span><span class="blue">草坪婚礼</span><span class="pink">一年四季青草坪</span> </p>
+                    <p>4888元/桌起</p>
+                    <p>北京 朝阳 </p>
                 </div>
                 <div class="w-clear"></div>
             </div></a>
@@ -231,7 +265,7 @@
 
 
 <!--底部-->
-<div class="h-footer">
+<div class="h-footer w-nav">
     <div class="h-footer-cont">
         <div class="h-footer-top">
             <a href="../index.html">首页</a>
@@ -282,7 +316,13 @@
         </div>
     </div>
 </div>
+<div class="w_jiuhao_tuijian w_location" style="display: none">
+    <h1>地理定位</h1>
+    <div style="width:1024px;height:550px;border:#ccc solid 1px;" id="dituContent"></div>
+</div>
 <script src="../js/index.js"></script>
+<script type="text/javascript" src="http://api.map.baidu.com/api?key=&v=1.1&services=true"></script>
 <script src="../js/w/w.js"></script>
+<script src="../js/w/mobile.js"></script>
 </body>
 </html>
