--- a/html/w/beijing.html
+++ b/html/w/beijing.html
@@ -3,8 +3,11 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title>场地</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="stylesheet" href="../../css/index.css"/>
     <link rel="stylesheet" href="../../css/reset.css"/>
+    <script src="../../js/mobile-util.js"></script>
+    <meta name="viewport" content="width=640">
     <link rel="stylesheet" href="../../css/w.css"/>
     <script src="../../js/jquery-1.8.3.min.js"></script>
     <link rel="stylesheet" type="text/css" href="../../css/font_p2t9isy0eqjxxbt9/iconfont.css">
@@ -19,7 +22,7 @@
 </head>
 <body>
 <!--导航-->
-<div class="h-nav">
+<div class="h-nav  w-nav">
     <div class="h-nav1 w-nav1">
         <div class="h-nav2">
             <div class="h-nav-logo">
@@ -62,7 +65,7 @@
 <!--内容-->
 <div class="cont w-wrap">
     <div class="w-box">
-        <p class="w_con_nav" style="border:0">
+        <p class="w_con_nav w-nav" style="border:0">
             <a href="#">首页</a> > <a href="#">场地</a> > <a href="#">北京古城老院精品酒店</a>
         </p>
         <div class="w_con_juihao">
@@ -193,20 +196,22 @@
                     <span class="w-span">深度解析</span>
                     <div class="w-clear"></div>
                     <div>
+                        <a href="shendujiexi.html">
                         <div class="w_jiuhao_list_left">
                             <img src="../../img/w-img/jiuhao3.jpg" alt="">
                             <div>
                                 <h1>场地解析|探寻京城顶级私密会所，带你踩踩一年四季青百万草坪</h1>
                                 <p>青砖白瓦灰白两色的古朴建筑，现代的草坪西式婚礼，古今碰撞的别样体验~</p>
                             </div>
-                        </div>
+                        </div></a>
+                        <a href="shendujiexi.html">
                         <div class="w_jiuhao_list_left w_jiuhao_list_right">
                             <img src="../../img/w-img/jiuhao4.jpg" alt="">
                             <div>
                                 <h1>服务特色｜从清晨到日落，完美一天的超优质婚礼体验！</h1>
                                 <p>看朝阳初起、夕阳西落，如诗如画的北湖九号庭院中，超高性价比婚礼 ~</p>
                             </div>
-                        </div>
+                        </div></a>
                     </div>
                     <div class="w-clear"></div>
                 </div>
@@ -261,7 +266,7 @@
     </div>
 </div>
 <!--底部-->
-<div class="h-footer">
+<div class="h-footer w-nav">
     <div class="h-footer-cont">
         <div class="h-footer-top">
             <a href="../../index.html">首页 ></a>
