--- a/html/h/h-about.html
+++ b/html/h/h-about.html
@@ -2,9 +2,124 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title></title>
+    <title>关于美薇亭</title>
+    <link rel="stylesheet" href="../../css/h-about.css"/>
+    <link rel="stylesheet" href="../../css/reset.css"/>
+    <script src="../../js/jquery-1.8.3.min.js"></script>
+    <script src="../../js/index.js"></script>
+    <script src="../../js/h-plot.js"></script>
 </head>
 <body>
+<!--导航-->
+<div class="h-nav">
+    <div class="h-nav1">
+        <div class="h-nav2">
+            <div class="h-nav-logo">
+                <a href="../../index.html"><img src="../../img/h-img/logo.png" alt=" "/></a>
+            </div>
+            <ul class="h-nav-ul">
+                <li class="h-nav-ul-li">
+                    <a href="../../index.html" target="_self">首页</a>
+                    <span class="select"></span>
+                </li>
+                <li class="h-nav-ul-li">
+                    <a href="../../html/z.html" target="_self">案例</a>
+                    <span></span>
+                </li>
+                <li class="h-nav-ul-li">
+                    <a href="../../html/w.html" target="_self">场地</a>
+                    <span></span>
+                </li>
+                <li class="h-nav-ul-li">
+                    <a href="../../html/g.html" target="_self">攻略</a>
+                    <span></span>
+                </li>
+                <li>
+                    <i class="iconfont icon-dianhua"></i>
+                    <a>400-0019-456</a>
+                    <span></span>
+                </li>
+            </ul>
+        </div>
+    </div>
+</div>
+<!--头部-->
+<div class="h-header">
+    <div class="h-about-top" style="background-image: url('../../img/h-img/TV-bac.jpg');">
+        <div class="h-about-top-TV" style="width: 100%; height: 100%">
+            <video class="h-about-video" poster="http://img0.easywed.cn/certificate/tag/2016/10/12/1761433a77f15fa36dad7d266f4ee8c9.jpg@192w.jpg" style="width: 100%; height: 100%"  controls>
+                <source src="http://img0.easywed.cn/project51/default_videos/2.mp4" type="video/mp4"/>
+            </video>
+            <div class="vjs-poster" ></div>
+        </div>
+    </div>
+</div>
+<!--内容视频-->
+<div class="h-about-cont">
+    <!--<div class="h-about-cont-list">-->
+        <!--<div class="h-about-cont-cont">-->
+            <!--<div class="h-about-cont-one">-->
+                <!--<img src="../../img/h-img/video-one.jpg" alt=" "/>-->
+                <!--<span class="play-tv">-->
+                    <!--<img src="../../img/h-img/h-play.png" alt=" "/>-->
+                <!--</span>-->
+            <!--</div>-->
+            <!--<div class="h-about-cont-text"></div>-->
+        <!--</div>-->
+        <!--<div class="h-about-cont-cont"></div>-->
+    <!--</div>-->
+</div>
+<!--底部-->
+<div class="h-footer">
+    <div class="h-footer-cont">
+        <div class="h-footer-top">
+            <a href="../../index.html">首页</a>
+            <span>全国热线：400-0019-456</span>
+        </div>
+        <div class="h-footer-center">
+            <div class="h-foot-nav h-footer-center1">
+                <h3>网址导航</h3>
+                <a href="../../html/z.html">场地</a>
+                <a href="../../html/w.html">案例</a>
+                <a href="../../html/g.html">攻略</a>
+                <a href="../../html/h/h-plot.html">婚礼策划</a>
+                <a href="../../html/h/h-Set.html">婚礼套系</a>
+                <a href="../../html/h/h-about.html">关于美薇亭</a>
+            </div>
+            <div class="h-foot-cont h-footer-center1">
+                <h3>联系方式</h3>
+                <p>客服微信：13581638551</p>
+                <p>商务合作：hezuo@awedding.com.cn</p>
+                <p>服务时间：周一至周日 10:00-19:00</p>
+                <p>地址：北京东城区东四十条94号亮点设计中心一层</p>
+            </div>
+            <div class="h-foot-about h-footer-center1">
+                <h3>关注我们</h3>
+                <div class="h-foot-about1">
+                    <a href="javascript:;" class="h-foot-about1-a">
+                        <img src="../../img/h-img/weixin.png" alt="美薇亭微信公众号"/>
+                    </a>
+                    <a href="http://weibo.com/MEIWEITINGWEDDING">
+                        <img src="../../img/h-img/weibo.png" alt="美薇亭官方微博"/>
+                    </a>
+                    <div class="erweima">
+                        <img src="../../img/h-img/erweima.png" alt="美薇亭APP下载"/>
+                    </div>
+                </div>
+            </div>
 
+        </div>
+        <div class="h-footer-copy">
+            <p>
+
+                Copyright @ 2006-2017 京ICP备11048047号-3
+                <br/>
+
+                美薇亭（北京）文化发展有限公司 版权所有
+
+            </p>
+        </div>
+    </div>
+</div>
 </body>
 </html>
