高国栋 8.28 Signed-off-by: gaoguodong124256903 <237892914@qq.com>

--- a/html/g/g-Raiders-list.html
+++ b/html/g/g-Raiders-list.html
@@ -112,8 +112,8 @@
                 <a href="../../html/z.html">场地</a>
                 <a href="../../html/w.html">案例</a>
                 <a href="../../html/g.html">攻略</a>
-                <a href="../h/h-plot.html">婚礼策划</a>
-                <a href="../h/h-Set.html">婚礼套系</a>
+                <a href="../../html/h/h-cehua.html">婚礼策划</a>
+                <a href="../../html/h/h-taoxi.html">婚礼套系</a>
                 <a href="../../html/h/h-about.html">关于美薇亭</a>
             </div>
             <div class="h-foot-cont h-footer-center1">
