--- a/html/w/beijing.html
+++ b/html/w/beijing.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html>
 <head lang="en">
     <meta charset="UTF-8">
     <title>场地</title>
@@ -196,42 +196,25 @@
                     <span class="w-span">深度解析</span>
                     <div class="w-clear"></div>
                     <div>
-<<<<<<< HEAD
-=======
-                        <a href="shendujiexi.html">
->>>>>>> origin/master
                         <div class="w_jiuhao_list_left">
                             <img src="../../img/w-img/jiuhao3.jpg" alt="">
                             <div>
                                 <h1>场地解析|探寻京城顶级私密会所，带你踩踩一年四季青百万草坪</h1>
                                 <p>青砖白瓦灰白两色的古朴建筑，现代的草坪西式婚礼，古今碰撞的别样体验~</p>
                             </div>
-<<<<<<< HEAD
                         </div>
-=======
-                        </div></a>
-                        <a href="shendujiexi.html">
->>>>>>> origin/master
                         <div class="w_jiuhao_list_left w_jiuhao_list_right">
                             <img src="../../img/w-img/jiuhao4.jpg" alt="">
                             <div>
                                 <h1>服务特色｜从清晨到日落，完美一天的超优质婚礼体验！</h1>
                                 <p>看朝阳初起、夕阳西落，如诗如画的北湖九号庭院中，超高性价比婚礼 ~</p>
                             </div>
-<<<<<<< HEAD
                         </div>
-=======
-                        </div></a>
->>>>>>> origin/master
                     </div>
                     <div class="w-clear"></div>
                 </div>
             </div>
-<<<<<<< HEAD
             <div class="w_juihao_right w-nav">
-=======
-            <div class="w_juihao_right">
->>>>>>> origin/master
                 <div class="w_jiuhao_find">
                     <h4>全国热线：400-0019-456</h4>
                     <div class="w_jiuhao_book">
@@ -246,11 +229,7 @@
                 </div>
             </div>
             <div class="w-clear"></div>
-<<<<<<< HEAD
             <div class="w_jiuhao_tuijian w_location w-nav">
-=======
-            <div class="w_jiuhao_tuijian w_location">
->>>>>>> origin/master
                 <h1>地理定位</h1>
                 <div style="width:1024px;height:550px;border:#ccc solid 1px;" id="dituContent"></div>
             </div>
